[circleci-project-setup] Add standard dependency. Update config.yml

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-s-alert": "^1.4.1",
     "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "standard": "^14.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
