--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reach/slider": "^0.10.3",
+    "@shwilliam/react-rubber-slider": "^0.1.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "d3": "^5.16.0",
     "formik": "^2.1.4",
     "moment": "^2.26.0",
     "react": "^16.13.1",
