--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@reach/slider": "^0.10.3",
     "@shwilliam/react-rubber-slider": "^0.1.2",
     "@testing-library/jest-dom": "^4.2.4",
