--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
+    "react-modal": "^3.11.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-s-alert": "^1.4.1",
