--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.0.1",
     "react-data-table-component": "^6.9.7",
     "react-datepicker": "^3.0.0",
+    "react-datetime": "^2.16.3",
     "react-datetime-picker": "^3.0.2",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
