--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-data-table-component": "^6.9.7",
     "react-datepicker": "^3.0.0",
     "react-dom": "^16.13.1",
     "react-google-login": "^5.1.20",
