--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-s-alert": "^1.4.1",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
-    "standard": "^14.3.4"
+    "standard": "^14.3.4",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
