--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,8 +7,5 @@ RUN npm ci --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 COPY . ./
 RUN npm run build
-
-FROM nginx:stable-alpine
-COPY --from=build /app/build /usr/share/nginx/html
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["serve", "-s", "build"]
