--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "react-s-alert": "^1.4.1",
     "react-scripts": "3.4.1",
     "reactstrap": "^8.4.1",
+    "serve": "^11.3.2",
     "standard": "^14.3.4",
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --max_old_space_size=4096 start",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
