--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -7,5 +7,7 @@ RUN npm ci --silent
 RUN npm install react-scripts@3.4.1 -g --silent
 COPY . ./
 RUN npm run build
-EXPOSE 80
-CMD ["serve", "-s", "build"]
+# EXPOSE 80
+# CMD ["npm", "start"]
+EXPOSE 3000
+CMD ["serve", "-s", "build", "-l", "3000"]
