--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "^4.6.4",
     "bootstrap": "^4.5.0",
     "d3": "^5.16.0",
     "formik": "^2.1.4",
