--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.0",
     "d3": "^5.16.0",
     "formik": "^2.1.4",
+    "jquery": "^3.5.1",
     "material-ui-icons": "^1.0.0-beta.36",
     "memoize": "^0.1.1",
     "memoize-one": "^5.1.1",
