--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "antd": "^4.6.4",
     "bootstrap": "^4.5.0",
     "d3": "^5.16.0",
+    "flexbox": "0.0.3",
     "formik": "^2.1.4",
     "jquery": "^3.5.1",
     "material-ui-icons": "^1.0.0-beta.36",
