--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "antd": "^4.6.4",
     "bootstrap": "^4.5.0",
     "d3": "^5.16.0",
+    "@devexpress/dx-react-core": "2.7.3",
+    "@devexpress/dx-react-chart-bootstrap4": "2.7.3",
+    "@devexpress/dx-react-chart": "2.7.3",
     "flexbox": "0.0.3",
     "formik": "^2.1.4",
     "jquery": "^3.5.1",
