--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@devexpress/dx-react-chart": "2.7.3",
+    "@devexpress/dx-react-chart-bootstrap4": "2.7.3",
+    "@devexpress/dx-react-chart-material-ui": "^2.7.3",
+    "@devexpress/dx-react-core": "2.7.3",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@reach/slider": "^0.10.3",
@@ -13,9 +17,7 @@
     "antd": "^4.6.4",
     "bootstrap": "^4.5.0",
     "d3": "^5.16.0",
-    "@devexpress/dx-react-core": "2.7.3",
-    "@devexpress/dx-react-chart-bootstrap4": "2.7.3",
-    "@devexpress/dx-react-chart": "2.7.3",
+    "devextreme-react": "^20.2.3",
     "flexbox": "0.0.3",
     "formik": "^2.1.4",
     "jquery": "^3.5.1",
