--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-data-table-component": "^6.9.7",
     "react-datepicker": "^3.0.0",
     "react-datetime": "^2.16.3",
