--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^5.2.0",
     "react-s-alert": "^1.4.1",
     "react-scripts": "3.4.1",
+    "reactive-button": "^1.3.3",
     "reactstrap": "^8.4.1",
     "serve": "^11.3.2",
     "standard": "^14.3.4",
